# bevy_md_sim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  auto_typer.py  build_and_run_wasm.sh  compose.yml  dump_code_for_llm.py  generate_amino_acids.py  get_tree.sh  index.html  pyproject.toml  test_autotyper.py  vercel.json
.github/workflows/: deploy.yml
api/: auto_typer.py  index.py  requirements.txt
assets/: amino_acids.json  force_field.json
assets/molecules/: acetaldehyde.json  alanine.json  arginine.json  asparagine.json  aspartic_acid.json  cysteine.json  ethanol.json  glutamic_acid.json  glutamine.json  glycine.json  histidine.json  isoleucine.json  leucine.json  lysine.json  methionine.json  methylamine.json  phenylalanine.json  proline.json  serine.json  threonine.json  tryptophan.json  tyrosine.json  valine.json  water.json
nginx/: nginx.conf
src/: components.rs  config.rs  core.rs  cursor.rs  debug.rs  interaction.rs  main.rs  persistence.rs  resources.rs  setup.rs  simulation.rs  spawning.rs  spawning_utils.rs  ui.rs  visualization.rs
src/ui/: amino_acid_spawner.rs  force_inspector.rs  help_panel.rs  hud.rs  info_panel.rs  mod.rs  pause_menu.rs  peptide_builder.rs  system_metrics_panel.rs
src_py/: generate_amino_acids.py
