[package]
name = "molecular_dynamics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.35.0"
bevy_panorbit_camera = "0.26.0"
bevy_picking = "0.16.1"
clap = { version = "4.5.40", features = ["derive"] }
futures-lite = "2.6.0"
serde = "1.0.219"
serde_json = "1.0.140"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
