[package]
name = "molecular_dynamics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.35.0"
bevy_panorbit_camera = "0.26.0"
bevy_picking = "0.16.1"
clap = { version = "4.5.40", features = ["derive"] }
egui_plot = "0.32.1"
futures-lite = "2.6.0"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
